<resources>

    <!--App Name-->
    <string name="app_name">Know Weather</string>


    <string name="copied">Copied</string>
    <string name="continu">Continue</string>
    <string name="please_wait">Please Wait...</string>
    <string name="errortxt">Something went wrong.We are working over it.Please try after some time</string>
    <string name="Timeout">Request Time out. Please try again.</string>
    <string name="networkerror">Network error,Please try after some time</string>
    <string name="city_not_found">City Not Found</string>
    <string name="update_app">Update Application</string>
    <string name="data_not_found">No Data Found</string>
    <string name="select_language">Select Language :</string>
    <string name="selected_language">Selected Language :</string>
    <string name="empty_name">Please Enter City Name</string>
    <string name="enter_name">Enter City Name :</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="temp">Temperature</string>
    <string name="humid">Humidity</string>
    <string name="desc">Description</string>
    <string name="latlong">Latitude , Longitude</string>
    <string name="enter_id">Enter City ID :</string>
    <string name="search_id">Search By City ID</string>
    <string name="search_name">Search By City Name</string>
    <string name="search">Search</string>
    <string name="empty_id">Please Enter City ID</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sel_search_type">Choose your search type :</string>
    <string name="internetconnection">This App needs Internet Connection. You are currently not connected to internet.</string>
    <string name="search_zip">Search By ZIP Code (USA only)</string>
    <string name="empty_zip">Please Enter ZIP Code (USA Only)</string>
    <string name="enter_ZIP">Enter ZIP Code (USA Only):</string>


</resources>
